[package]
name = "pass_manager_struct"
version = "0.1.0"
authors = ["Parodix007 <sebastian.siarczynski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
[dependencies.magic-crypt]
version = "*"
default-features = false